<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.insiteo.sampleapp.MainActivity" >

    <item
        android:id="@+id/action_version"
        app:showAsAction="always"
        android:enabled="false"
        android:title="version"/>


    <item
        android:id="@+id/site_label"
        app:showAsAction="never"
        android:enabled="false"/>

    <item
        android:id="@+id/action_itinerary"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_itinerary"/>
    
    <item
        android:id="@+id/action_route"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_route"/>
    
    <item
        android:id="@+id/action_locate_ext_poi"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_locate_ext_poi"/>
    
    <item
        android:id="@+id/action_clear_itinerary"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_clear_itinerary"/>
    
    <item
        android:id="@+id/action_clear_all"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_clear_all"/>

    <item
        android:id="@+id/action_information"
        app:showAsAction="never"
        android:orderInCategory="1000"
        android:title="@string/action_information"/>

    <item
        android:id="@+id/action_switch_site"
        app:showAsAction="never"
        android:orderInCategory="1000"
        android:title="@string/action_switch_site"/>

</menu>
